--- a/MoviesObjc/MoviesObjc/view/Base.lproj/Main.storyboard
+++ b/MoviesObjc/MoviesObjc/view/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="uam-YA-1tS">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -12,7 +12,7 @@
         <!--Table View Controller-->
         <scene sceneID="h2u-1d-ISH">
             <objects>
-                <tableViewController id="uam-YA-1tS" sceneMemberID="viewController">
+                <tableViewController id="uam-YA-1tS" customClass="JJRTableViewController" customModule="MoviesObjc" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="W2c-C6-ZnW">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -21,9 +21,12 @@
                             <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="uam-YA-1tS" id="pVY-Ng-m5e"/>
+                            </connections>
                         </searchBar>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="movieCell" rowHeight="171" id="9cq-z2-QOQ">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="movieCell" rowHeight="171" id="9cq-z2-QOQ" customClass="JJRTableViewCell" customModule="MoviesObjc" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="72" width="414" height="171"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9cq-z2-QOQ" id="Npc-lm-OSx">
@@ -72,6 +75,11 @@
                                         <constraint firstItem="31P-jR-IAq" firstAttribute="centerX" secondItem="Npc-lm-OSx" secondAttribute="centerX" id="hiH-Z4-yck"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="overViewLabel" destination="fgJ-TP-ia6" id="xhH-Gu-o0w"/>
+                                    <outlet property="ratingLabel" destination="QoR-Zf-qtZ" id="8Ih-sZ-GTV"/>
+                                    <outlet property="titleLabel" destination="0v5-Ua-t13" id="AlH-PN-wsa"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -79,6 +87,9 @@
                             <outlet property="delegate" destination="uam-YA-1tS" id="Sqm-3u-Cqu"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <outlet property="movieSearchBar" destination="EB1-Sf-dMH" id="M52-0y-TFB"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a9y-4F-Fwu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
